--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,19 @@
 version: '3.8'
 
 services:
+  frontend:
+    build:
+      context: ./frontend
+    container_name: frontend
+    ports:
+      - "8080:80"
+    depends_on:
+      - app
+
   app:
     build: .
     ports:
-      - "8000:8080"
+      - "8001:8080"
     volumes:
       - .:/home/fast
     env_file:
